Minor spacing fixes

--- a/pages/sections/Community/_community.scss
+++ b/pages/sections/Community/_community.scss
@@ -23,6 +23,11 @@
 		&-title {
 			@extend .heading;
 			@extend .mobile-heading-2;
+			@media (min-width: 724px) {
+				font-size: 4.8rem;
+				line-height: 6.5rem;
+				margin-bottom: 16px;
+			}
 
 			span {
 				@extend .accent-word;
@@ -34,6 +39,10 @@
 			@extend .mobile-paragraph-md;
 			margin-top: 24px;
 			width: 75%;
+			@media (min-width: 724px) {
+				font-size: 1.8rem;
+				line-height: 2.8rem;
+			}
 		}
 	}
 	&__img {
